# betalens

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  analyst.py  backtest.py  datafeed.py  deap_miner.py  init.py  init_mongo.py  pyproject.toml  regression.py  requirements.txt  robust.py  setup.py  sort.py  windmongo.py
.github/workflows/: publish.yml
betalens/: __init__.py  analyst.py  backtest.py  datafeed.py  factor.py
betalens-factor/: .gitignore  DEVELOPMENT_RULES.md  factor_page.py  factor_template.py
betalens-factor/SwClass/: StockClassifyUse_stock_20260601.xls  build_industry_wide.py  insert_industry.py
betalens-factor/alpha101/: alpha12.py  factor_template_alpha101.py  page_alpha101.py  spec_alpha101.json
betalens-factor/eventstudy/: EVENT_DATA_RULES.md  eventstudy_params.json  run_eventstudy.py
betalens-factor/tdx/: factor_template_tdx.py  page_tdx.py  spec_tdx.json
betalens-factor/中信建投高频和行为金融学选股因子跟踪周报/: factor_ILLIQ_v2.py
betalens/analyst/: __init__.py  analyst.py  metrics.py  naming.py  plotting.py
betalens/backtest/: __init__.py  backtest.py
betalens/datafeed/: CONFIG_README.md  __init__.py  config.json  config.py  core.py  ede_processor.py  excel.py  industry.py  integration.py  query.py  universe.py  validation.py  wind_ingest.py
betalens/eventstudy/: __init__.py  eventstudy.py
betalens/factor/: __init__.py  factor.py  preprocessing.py  (+2 more)
dashboard/: README.md  app.py  run.bat  run_backend.bat  run_frontend.bat
docs/: betalens.rst  conf.py  getting_started.rst  index.rst  modules.rst  requirements.txt
examples/: DDI.py  factor_demo.ipynb  factor_example.py
示例/: DDI.py  factor.py
(+133 files in other folders)
