[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "betalens"
version = "1.1.0"
description = "因子分析与回测框架"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
    "prettytable>=3.0.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
viz = ["plotly>=5.0.0"]
dashboard = ["streamlit>=1.30.0", "plotly>=5.0.0"]
db = ["psycopg2-binary>=2.9.0"]

[tool.setuptools.packages.find]
include = ["betalens*"]
